--- a/index.html
+++ b/index.html
@@ -1,116 +1,123 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Welcome to Felix's Site!!!</title>
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="nav">
 <div class="container">
-  <ul class="menu">
-    <li><a href="#about">Who am I</a></li>
-    <li><a href="#my-work">My work</a></li>
-    <li><a href="#contact-me">Contact ME</a></li>
-  </ul>
+    <button type="button" class="menu-button">
+    三
+  </button>
+    <input type="checkbox" class="menu-button-checkbox">
+
+
+<ul class="menu">
+<li><a href="#about">Who am I</a></li>
+<li><a href="#my-work">My work</a></li>
+<li><a href="#contact-me">Contact ME</a></li>
+</ul>
 </div>
 </div>
 <div id="content">
 <div class="container">
-  <div id="about">
-    <!-- I am Felix lin -->
-    <div id="my-avatar">
-      <img src="img/my_photo.png" alt="my photo">
-    </div>
-    <div id="my-info">
-      <h1>I am Felix, Lin</h1>
-      <h3>Mechanical Engineer</h3>
-      <hr>
-      <table>
-        <tr>
-          <th>Birth</th>
-          <td>1985</td>
-        </tr>
-        <tr>
-          <th>工作經驗</th>
-          <td>>6年，面板機構開發；現職手工具機構開發</td>
-        </tr>
-        <tr>
-          <th>開發技能</th>
-          <td>Tolerance Analysis，CPK check，Creo</td> 
-        </tr>
-        <tr>
-          <th>學習經歷</th>
-          <td>
-            清大機械系學士學位, 2007 <br>
-            成大機械所碩士學位, 2009
-          </td>
-        </tr>
-      </table>
-    </div>
-  </div>
-  <hr class="bar">
-  <div id="my-work">
-    <h1> This is my work</h1>
-    <div id="my-work-gallery">
-      <div class="item">
-        <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
-        <div class="item-info">
-          <h3>我的個人網站</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
-        <div class="item-info">
-          <h3>我的個人網站</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
-        <div class="item-info">
-          <h3>我的個人網站</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
-        <div class="item-info">
-          <h3>我的個人網站</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
-        <div class="item-info">
-          <h3>我的個人網站</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
-        </div>
-      </div>
+<div id="about">
+<!-- I am Felix lin -->
+<div id="my-avatar">
+  <img src="img/my_photo.png" alt="my photo">
+</div>
+<div id="my-info">
+  <h1>I am Felix, Lin</h1>
+  <h3>Mechanical Engineer</h3>
+  <hr>
+  <table>
+    <tr>
+      <th>Birth</th>
+      <td>1985</td>
+    </tr>
+    <tr>
+      <th>工作經驗</th>
+      <td>>6年，面板機構開發；現職手工具機構開發</td>
+    </tr>
+    <tr>
+      <th>開發技能</th>
+      <td>Tolerance Analysis，CPK check，Creo</td> 
+    </tr>
+    <tr>
+      <th>學習經歷</th>
+      <td>
+        清大機械系學士學位, 2007 <br>
+        成大機械所碩士學位, 2009
+      </td>
+    </tr>
+  </table>
+</div>
+</div>
+<hr class="bar">
+<div id="my-work">
+<h1> This is my work</h1>
+<div id="my-work-gallery">
+  <div class="item">
+    <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
+    <div class="item-info">
+      <h3>我的個人網站</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
     </div>
   </div>
-  <hr class="bar">
-  <div id=contact-me>
-    <h1>Contact me</h1>
-    <form action="" class="contact-form">
-      <div class = "form-row">
-        <label for="name">姓名</label>
-        <input id="name" name="name" type="text">
-      </div>
-      <div class="form-row">
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email">
-      </div>
-      <div class="form-row">
-        <label for="message">訊息</label>
-        <textarea name="message" id="message"></textarea>
-      </div>
-      <div class="form-row">
-        <button type="reset">重設</button>
-        <button type="submit">提交</button>
-      </div>
-    </form>
+  <div class="item">
+    <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
+    <div class="item-info">
+      <h3>我的個人網站</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
+    </div>
   </div>
-  <hr class="bar">
+  <div class="item">
+    <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
+    <div class="item-info">
+      <h3>我的個人網站</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
+    </div>
+  </div>
+  <div class="item">
+    <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
+    <div class="item-info">
+      <h3>我的個人網站</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
+    </div>
+  </div>
+  <div class="item">
+    <img src="http://lorempixel.com/300/300/" alt="My Personal Site">
+    <div class="item-info">
+      <h3>我的個人網站</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque, dolorem alias. Quam quaerat, nam et alias ea harum dignissimos laborum vitae mollitia a numquam dolorem, culpa cum, aspernatur dolore.</p>
+    </div>
+  </div>
+</div>
+</div>
+<hr class="bar">
+<div id=contact-me>
+<h1>Contact me</h1>
+<form action="" class="contact-form">
+  <div class = "form-row">
+    <label for="name">姓名</label>
+    <input id="name" name="name" type="text">
+  </div>
+  <div class="form-row">
+    <label for="email">Email</label>
+    <input id="email" name="email" type="email">
+  </div>
+  <div class="form-row">
+    <label for="message">訊息</label>
+    <textarea name="message" id="message"></textarea>
+  </div>
+  <div class="form-row">
+    <button type="reset">重設</button>
+    <button type="submit">提交</button>
+  </div>
+</form>
+</div>
+<hr class="bar">
 </div>
 </div>
 </body>
